# inf443_vcl

./: .gitignore  CMakeLists.txt  README.md
scenes/3D_graphics/00_default/: BezierSpline.cpp  BezierSpline.h  Branch.cpp  Branch.h  Leaf.cpp  Leaf.h  Tree.cpp  Tree.h  TreeSpecies.cpp  TreeSpecies.h  TurtleGraphics.cpp  TurtleGraphics.h  default.cpp  default.hpp
scenes/shared_assets/shaders/mesh/: shader.frag.glsl
src/: CMakeLists.txt
src/assets/models/: bear.blend  bear.fbx  bird.blend  bird.fbx  polarbear.fbx  skydome.fbx  skydome.mtl
src/assets/textures/.mayaSwatches/: skydome.png_hcm.swatch
src/main/: main.cpp
src/objects/: Object.cpp  Object.h
src/objects/bear/: Bear.cpp  Bear.h  BearCompanion.cpp  BearCompanion.h  BearFilmingCompanion.cpp  BearFilmingCompanion.h  BearWalkingCompanion.cpp  BearWalkingCompanion.h
src/objects/boid/: Bird.cpp  Bird.h  Boid.cpp  Boid.h
src/objects/box/: Box.cpp  Box.h
src/objects/companion/: ActivatableCompanion.cpp  ActivatableCompanion.h  CardinalSplineCompanion.cpp  CardinalSplineCompanion.h  CompanionFollower.cpp  CompanionFollower.h  CompanionObject.cpp  CompanionObject.h  CyclicCompanion.cpp  CyclicCompanion.h  DipoleCompanion.cpp  DipoleCompanion.h  ObjectFollowerCompanion.cpp  ObjectFollowerCompanion.h  OneWayCompanion.cpp  OneWayCompanion.h
src/objects/debug/: DebugObject.cpp  DebugObject.h  KeyframesDrawer.cpp  KeyframesDrawer.h  TrajectoryDrawer.cpp  TrajectoryDrawer.h
src/objects/dome/: Dome.cpp  Dome.h
src/objects/forest/: Forest.cpp  Forest.h  ForestTile.cpp  ForestTile.h
src/objects/grid/: Grid.cpp  Grid.h
src/objects/marker/: CoordinateMarker.cpp  CoordinateMarker.h
src/objects/rock/: Rock.cpp  Rock.h
src/objects/snow/: Snow.cpp  Snow.h
src/objects/terrain/: BaseTerrain.cpp  BaseTerrain.h  FlatSurface.cpp  FlatSurface.h  MountainTerrain.cpp  MountainTerrain.h  Terrain.cpp  Terrain.h  TerrainFeature.cpp  TerrainFeature.h
src/objects/tree/: Branch.cpp  Branch.h  Leaf.cpp  Leaf.h  TranslatedTree.cpp  TranslatedTree.h  Tree.cpp  Tree.h  TreeSpecies.cpp  TreeSpecies.h
src/objects/water/: Water.cpp  Water.h  WaterLimits.cpp  WaterLimits.h  WaterOscillator.cpp  WaterOscillator.h
src/scene/: CascadeShadow.cpp  CascadeShadow.h  Scene.cpp  Scene.h  SceneGui.cpp  SceneGui.h
src/shaders/: Shaders.cpp  Shaders.h
src/shaders/depth/: shader.frag.glsl  shader.vert.glsl
src/shaders/mesh/: shader.frag.glsl  shader.vert.glsl
src/shaders/mesh_back_illumination/: shader.vert.glsl
src/shaders/mesh_skinned/: shader.vert.glsl
src/shaders/normals/: shader.geom.glsl
src/shaders/segment_immediate_mode/: shader.vert.glsl
src/shaders/snow/: shader.frag.glsl  shader.vert.glsl
src/shaders/terrain_mesh/: shader.frag.glsl  shader.vert.glsl
src/shaders/water_mesh/: shader.frag.glsl  shader.vert.glsl
src/shaders/wireframe/: shader.geom.glsl  shader.vert.glsl
src/shaders/wireframe_quads/: shader.geom.glsl
src/utils/: BezierSpline.cpp  BezierSpline.h  BillboardGenerator.cpp  BillboardGenerator.h  BoundingBox.cpp  BoundingBox.h  BoundingSphere.cpp  BoundingSphere.h  Constants.cpp  Constants.h  SingletonException.cpp  SingletonException.h  Texture.cpp  Texture.h  TurtleGraphics.cpp  TurtleGraphics.h
tests/: CMakeLists.txt  assimp_test.cpp  bear_filming_companion_test.cpp  bear_test.cpp  bear_trajectory_test.cpp  bird_follower_test.cpp  bird_test.cpp  boid_terrain_test.cpp  boid_test.cpp  cardinal_spline_test.cpp  companion_follower_test.cpp  dome_test.cpp  forest_test.cpp  lake_test.cpp  light_source_test.cpp  perlin_test.cpp  rock_test.cpp  scene_integration_test.cpp  shadow_test.cpp  snow_test.cpp  terrain_test.cpp  tree_test.cpp  water_test.cpp
vcl/base/rand/: rand.hpp  rand_generator.cpp  rand_generator.h
vcl/containers/buffer/buffer/: buffer.hpp
vcl/interaction/camera/: camera.cpp  camera.hpp
vcl/interaction/camera_control_glfw/: camera_control_glfw.cpp  camera_control_glfw.hpp
vcl/interaction/picking/ray/: picking_ray.cpp  picking_ray.hpp
vcl/math/: math.hpp
vcl/math/helper_functions/: helper_functions.hpp
vcl/math/helper_functions/lerp/: lerp.cpp  lerp.h
vcl/math/light_source/: light_source.cpp  light_source.hpp
vcl/math/mat/mat3/: mat3.cpp  mat3.hpp
vcl/math/mat/mat4/: mat4.cpp  mat4.hpp
vcl/math/noise/: PerlinNoise.cpp  PerlinNoise.h
vcl/math/quaternion/: Quaternion.cpp  Quaternion.hpp  quaternion.cpp  quaternion.hpp
vcl/math/random/: random.hpp
vcl/math/spline/: CardinalSpline.cpp  CardinalSpline.h  CyclicCardinalSpline.cpp  CyclicCardinalSpline.h
vcl/math/transformation/special_transform/: special_transform.cpp  special_transform.hpp
vcl/math/vec/vec3/: vec3.cpp  vec3.hpp
vcl/math/vec/vec4/: vec4.cpp  vec4.hpp
vcl/opengl/: opengl.hpp
vcl/opengl/depth_map/: depth_map.cpp  depth_map.hpp  depth_maps.cpp  depth_maps.hpp
vcl/opengl/texture/image/: image.hpp
vcl/opengl/uniform/: uniform.cpp  uniform.hpp
vcl/shape/curve/curve_drawable/: curve_drawable.cpp  curve_drawable.hpp
vcl/shape/curve/curve_dynamic_drawable/: curve_dynamic_drawable.cpp  curve_dynamic_drawable.hpp
vcl/shape/hierarchy_mesh/hierarchy_mesh_drawable/: hierarchy_mesh_drawable.cpp  hierarchy_mesh_drawable.hpp
vcl/shape/mesh/: mesh.hpp
vcl/shape/mesh/mesh_drawable/: mesh_drawable.cpp  mesh_drawable.hpp  mesh_skinned_drawable.cpp  mesh_skinned_drawable.hpp
vcl/shape/mesh/mesh_loader/: mesh_loader.hpp
vcl/wrapper/lodepng/: lodepng.cpp
(+19 files in other folders)
