file(GLOB TEST_FILES *.cpp)
foreach (testfile ${TEST_FILES})
    get_filename_component(testname ${testfile} NAME_WE)
    add_executable(${testname} ${testfile})
    if (UNIX)
        target_link_libraries(${testname} src vcl third_party dl)
    elseif (WIN32)
        target_link_libraries(${testname} src vcl third_party ${GLFW_LIBRARIES})
    endif ()
endforeach (testfile ${TEST_FILES})
